1. 修改banner写字框响应式布局 2. 修改滑动卡片响应式布局 3. 给APIs、assistant、explore_more模块图片改成视频

--- a/create.html
+++ b/create.html
@@ -1657,7 +1657,7 @@
         <div class="create-text-wrapper">
           <!-- 标题 -->
           <h1 class="create-title">
-            Create with the Eclipse Engine
+            CREATE WITH THE ECLIPSES ENGINE
           </h1>
 
           <!-- 描述 -->
